--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
@@ -51,7 +51,7 @@
 						<h:outputLabel />
 						<h:panelGroup style="text-align: center; width: 100%;">
 							<h:outputLabel></h:outputLabel>
-							<p:commandButton action="#{UserBean.guardar}" value="Crear"
+							<p:commandButton action="#{UserBean.mostrar}" value="Crear"
 								class="boton-ingresar" />
 						</h:panelGroup>
 					</h:panelGrid>
