--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
@@ -39,8 +39,8 @@
 				<h:panelGrid columns="2" class="cuadroForm">
 					<h:outputLabel for="identificacion" value="Identificación:"
 						class="label" />
-					<h:inputText value="#{UserBean.nombreUsuario}" type="text"
-						id="identificacion" class="input-text" />
+					<h:inputText value="" type="text" id="identificacion"
+						class="input-text" />
 
 					<h:outputLabel for="toggle" value="Contraseña:" class="label" />
 					<h:panelGroup class="password-container">
@@ -52,20 +52,15 @@
 					<h:outputLabel />
 					<h:panelGroup>
 						<h:outputLabel></h:outputLabel>
-						<p:commandButton action="#{UserBean.mostrar}" value="Ingresar"
-							class="boton-ingresar" />
+						<p:commandButton value="Ingresar" class="boton-ingresar" />
 					</h:panelGroup>
 					<h:panelGroup>
-						<br>
-						<i class="fa-solid fa-user fa-xl"></i>
-						<a id="nuevo-usuario" href="newUser.xhtml">Crear Usuario</a>
-						</br>
+						<br> <i class="fa-solid fa-user fa-xl"></i> <a
+							id="nuevo-usuario" href="newUser.xhtml">Crear Usuario</a> </br>
 					</h:panelGroup>
 					<h:panelGroup style="text-align: left">
-						<br>
-						<i class="fa-solid fa-question fa-xl"></i>
-						<a href="control.xhtml">Recordar contraseña</a>
-						</br>
+						<br> <i class="fa-solid fa-question fa-xl"></i> <a
+							href="control.xhtml">Recordar contraseña</a> </br>
 
 					</h:panelGroup>
 				</h:panelGrid>
