--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
@@ -39,22 +39,23 @@
 					Usuario</h2>
 
 				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText id="name"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="name" value="Nombre" />
+					<span class="ui-float-label"> <p:inputText
+							value="#{UserBean.nombre}" id="name" required="true"
+							style="width: 100%;" /> <p:outputLabel for="name" value="Nombre" />
 					</span>
 				</div>
 
 				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText id="apellido"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="apellido" value="Apellido" />
+					<span class="ui-float-label"> <p:inputText
+							value="#{UserBean.apellido}" id="apellido" required="true"
+							style="width: 100%;" /> <p:outputLabel for="apellido"
+							value="Apellido" />
 					</span>
 				</div>
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:inputText
-							id="identificacion"
-							required="true" style="width: 100%;"
+							value="#{UserBean.id}" id="identificacion" required="true"
+							style="width: 100%;"
 							validatorMessage="Ingrese un número de identificación válido">
 							<f:validateRegex pattern="^\d{6,12}$" />
 						</p:inputText> <p:outputLabel for="identificacion"
@@ -64,23 +65,26 @@
 
 
 				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText id="email"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="email" value="Correo Electrónico" />
+					<span class="ui-float-label"> <p:inputText
+							value="#{UserBean.correo}" id="email" required="true"
+							style="width: 100%;" /> <p:outputLabel for="email"
+							value="Correo Electrónico" />
 					</span>
 				</div>
 
 				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:password id="pwd1"
-							match="pwd2" required="true" style="width: 100%;" /> <p:outputLabel
+					<span class="ui-float-label"> <p:password
+							value="#{UserBean.contrasegna}" id="pwd1" match="pwd2"
+							required="true" style="width: 100%;" /> <p:outputLabel
 							for="pwd1" value="Contraseña" />
 					</span>
 				</div>
 
 				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:password id="pwd2"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="pwd2" value="Confirmar Contraseña" />
+					<span class="ui-float-label"> <p:password
+							value="#{UserBean.contrasegna2}" id="pwd2" required="true"
+							style="width: 100%;" /> <p:outputLabel for="pwd2"
+							value="Confirmar Contraseña" />
 					</span>
 				</div>
 
@@ -88,13 +92,13 @@
 					<span> <p:selectOneMenu id="lazy" dynamic="true"
 							style="width: 100%;">
 							<f:selectItem itemLabel="Seleccione un cargo" itemValue="" />
-							<f:selectItems value="#{selectOneMenuView.options}" />
+							<f:selectItems value="#{UserBean.cargo}" />
 						</p:selectOneMenu>
-					</span>
+					</span>SS
 				</div>
 
 				<div class="field botones-container">
-					<p:commandButton update="@form" value="Guardar"
+					<p:commandButton action="#{UserBean.}" update="@form" value="Guardar"
 						styleClass="boton-crear" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
