--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newPassword.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newPassword.xhtml
@@ -6,9 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
 
-	<title>Crear Usuario</title>
+<h:head>
+	<title>Reesblacer contraseña</title>
 	<link
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 		rel="stylesheet"
@@ -18,16 +18,12 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous" />
-	<link rel="stylesheet" href="style.css" />
-		
-	<link rel="stylesheet" href="userStyle.css" />
 	<script src="https://kit.fontawesome.com/e5507d7bda.js"
 		crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="passwordStyle.css" />
 	<script src="script.js"></script>
 	<link rel="icon" type="image/png" href="iconopag.ico" />
-
 </h:head>
-
 <h:body>
 	<div id="box-formulario">
 		<div class="card">
@@ -36,42 +32,9 @@
 					<p:autoUpdate />
 				</p:messages>
 
-				<h2 style="text-align: center; margin-bottom: 20px;">Crear
-					Usuario</h2>
-
-				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText
-							value="#{UserBean.nombre}" id="name" required="true"
-							style="width: 100%;" /> <p:outputLabel for="name" value="Nombre" />
-					</span>
-				</div>
-
-				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText
-							value="#{UserBean.apellido}" id="apellido" required="true"
-							style="width: 100%;" /> <p:outputLabel for="apellido"
-							value="Apellido" />
-					</span>
-				</div>
-				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText
-							value="#{UserBean.id}" id="identificacion" required="true"
-							style="width: 100%;"
-							validatorMessage="Ingrese un número de identificación válido">
-							<f:validateRegex pattern="^\d{6,12}$" />
-						</p:inputText> <p:outputLabel for="identificacion"
-							value="Número de Identificación" />
-					</span>
-				</div>
-
-
-				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:inputText
-							value="#{UserBean.correo}" id="email" required="true"
-							style="width: 100%;" /> <p:outputLabel for="email"
-							value="Correo Electrónico" />
-					</span>
-				</div>
+				<h2 style="text-align: center; margin-bottom: 20px;">Nueva
+					Contraseña</h2>
+					<!-- contraseña 1 -->
 
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
@@ -81,6 +44,7 @@
 					</span>
 				</div>
 
+					<!-- contraseña 2 -->
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
 							value="#{UserBean.contrasegna2}" id="pwd2" required="true"
@@ -89,17 +53,13 @@
 					</span>
 				</div>
 
-				<div class="field" style="margin-bottom: 20px;">
-					<span> <p:selectOneMenu id="lazy" dynamic="true"
-							style="width: 100%;">
-							<f:selectItem itemLabel="Seleccione un cargo" itemValue="" />
-							<f:selectItems value="#{UserBean.cargo}" />
-						</p:selectOneMenu>
-					</span>
-				</div>
+				<p:messages id="messages" showDetail="true">
+					<p:autoUpdate />
+				</p:messages>
 
+<!-- Botones El primero es para guardar la nueva contraseña -->
 				<div class="field botones-container">
-					<p:commandButton  update="@form" value="Guardar"
+					<p:commandButton update="@form" value="Continuar"
 						styleClass="boton-crear" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
@@ -111,6 +71,5 @@
 			</h:form>
 		</div>
 	</div>
-
 </h:body>
 </html>
