--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/resetPassword.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/resetPassword.xhtml
@@ -6,9 +6,9 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-<h:head>
 
-	<title>Crear Usuario</title>
+<h:head>
+	<title>Reesblacer contraseña</title>
 	<link
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 		rel="stylesheet"
@@ -18,15 +18,12 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous" />
-	<link rel="stylesheet" href="style.css"></link>
 	<script src="https://kit.fontawesome.com/e5507d7bda.js"
 		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="userStyle.css" />
+	<link rel="stylesheet" href="passwordStyle.css" />
 	<script src="script.js"></script>
 	<link rel="icon" type="image/png" href="iconopag.ico" />
-
 </h:head>
-
 <h:body>
 	<div id="box-formulario">
 		<div class="card">
@@ -35,10 +32,12 @@
 					<p:autoUpdate />
 				</p:messages>
 
-				<h2 style="text-align: center; margin-bottom: 20px;">Iniciar
-					Sesión</h2>
+				<h2 style="text-align: center; margin-bottom: 20px;">Recordar
+					Contraseña</h2>
 
 
+
+<!-- Input para verificar si el numero de identificacion existe -->
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:inputText
 							value="#{UserBean.id}" id="identificacion" required="true"
@@ -50,30 +49,21 @@
 					</span>
 				</div>
 
-				<div class="field" style="margin-bottom: 20px;">
-					<span class="ui-float-label"> <p:password
-							value="#{UserBean.contrasegna}" id="pwd1" match="pwd2"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="pwd1" value="Contraseña" />
-					</span>
-				</div>
 
-
+<!-- Al ponerle la funcion al boton de continuar tienes que quitar el inmediate para que se cumpla la funcion (Solo en el de continuar) -->
 
 				<div class="field botones-container">
-					<p:commandButton  value="Ingresar"
-						class="boton-crear" action="menu.xhtml?faces-redirect=true" immediate="true"/>
-					<p:commandButton value="Nuevo Usuario" icon="fa fa-user"
-						class="boton-home" action="newUser.xhtml?faces-redirect=true"
+					<p:commandButton update="@form" value="Continuar"
+						styleClass="boton-crear" action="newPassword.xhtml?faces-redirect=true" immediate="true"/>
+					<p:commandButton value="Inicio" icon="fa fa-home"
+						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
 
 
 				</div>
-				<a href="resetPassword.xhtml">Recordar contraseña</a>
 
 			</h:form>
 		</div>
 	</div>
-
 </h:body>
 </html>
