--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/menu.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/menu.xhtml
@@ -34,23 +34,27 @@
 
 				<h2 style="text-align: center; margin-bottom: 20px;">Menú</h2>
 				<h6 style="text-align: center; margin-bottom: 20px;">Selecciona una opción</h6>
-				<!-- contraseña 1 -->
-
 				
-
-				<!-- Botones El primero es para guardar la nueva contraseña -->
-				<div class="field botones-container">
-					<p:commandButton update="@form" value="Continuar"
-						styleClass="boton-crear" />
+				<!-- Contenedor para los botones -->
+				<div class="botones-wrapper">
+					<p:commandButton update="@form" value="Opción 1"
+						class="boton-crear" />
+					<p:commandButton update="@form" value="Opcion 2"
+						class="boton-crear" />
+					<p:commandButton update="@form" value="Opcion 3"
+						class="boton-crear" />
+					<p:commandButton update="@form" value="Opcion 4"
+						class="boton-crear" />
+					<p:commandButton update="@form" value="Opcion 5"
+						class="boton-crear" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
-						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
+						class="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
-
-
 				</div>
 
 			</h:form>
 		</div>
 	</div>
+
 </h:body>
 </html>
