--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
@@ -19,7 +19,7 @@
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous" />
 	<link rel="stylesheet" href="style.css" />
-		
+
 	<link rel="stylesheet" href="userStyle.css" />
 	<script src="https://kit.fontawesome.com/e5507d7bda.js"
 		crossorigin="anonymous"></script>
@@ -53,16 +53,17 @@
 							value="Apellido" />
 					</span>
 				</div>
-				<div class="field" style="margin-bottom: 20px;">
+					<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:inputText
-							value="#{UserBean.id}" id="identificacion" required="true"
-							style="width: 100%;"
+							id="identificacion"
+							required="true" style="width: 100%;"
 							validatorMessage="Ingrese un número de identificación válido">
 							<f:validateRegex pattern="^\d{6,12}$" />
 						</p:inputText> <p:outputLabel for="identificacion"
 							value="Número de Identificación" />
 					</span>
 				</div>
+
 
 
 				<div class="field" style="margin-bottom: 20px;">
@@ -101,7 +102,6 @@
 				<div class="field botones-container">
 
 					<p:commandButton action="#{UserBean.crear}" value="Guardar"
-
 						styleClass="boton-crear" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
