--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
@@ -31,10 +31,8 @@
 <h:body>
 	<div id="box-formulario">
 		<div class="card">
-			<h:form>
-				<p:messages>
-					<p:autoUpdate />
-				</p:messages>
+			<h:form id="formulario1">
+
 
 				<h2 style="text-align: center; margin-bottom: 20px;">Crear
 					Usuario</h2>
@@ -53,10 +51,10 @@
 							value="Apellido" />
 					</span>
 				</div>
-					<div class="field" style="margin-bottom: 20px;">
+				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:inputText
-							id="identificacion"
-							required="true" style="width: 100%;"
+							value="#{UserBean.id}" id="identificacion" required="true"
+							style="width: 100%;"
 							validatorMessage="Ingrese un número de identificación válido">
 							<f:validateRegex pattern="^\d{6,12}$" />
 						</p:inputText> <p:outputLabel for="identificacion"
@@ -102,7 +100,7 @@
 				<div class="field botones-container">
 
 					<p:commandButton action="#{UserBean.crear}" value="Guardar"
-						styleClass="boton-crear" />
+						styleClass="boton-crear" update="formulario1" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
