--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
@@ -39,10 +39,10 @@
 					Sesión</h2>
 
 
-						<div class="field" style="margin-bottom: 20px;">
+				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:inputText
-							id="identificacion"
-							required="true" style="width: 100%;"
+							value="#{UserBean.id}" id="identificacion" required="true"
+							style="width: 100%;"
 							validatorMessage="Ingrese un número de identificación válido">
 							<f:validateRegex pattern="^\d{6,12}$" />
 						</p:inputText> <p:outputLabel for="identificacion"
@@ -52,17 +52,17 @@
 
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
-							value="#{UserBean.contrasegna}" id="pwd1" match="pwd2"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="pwd1" value="Contraseña" />
+							value="#{UserBean.contrasegna}" id="pwd1" required="true"
+							style="width: 100%;" /> <p:outputLabel for="pwd1"
+							value="Contraseña" />
 					</span>
 				</div>
 
 
 
 				<div class="field botones-container">
-					<p:commandButton  value="Ingresar"
-						class="boton-crear" action="menu.xhtml?faces-redirect=true" immediate="true"/>
+					<p:commandButton value="Ingresar" class="boton-crear"
+						action="#{UserBean.iniciarSesion}" />
 					<p:commandButton value="Nuevo Usuario" icon="fa fa-user"
 						class="boton-home" action="newUser.xhtml?faces-redirect=true"
 						immediate="true" />
