--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/menu.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/menu.xhtml
@@ -8,7 +8,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Reesblacer contraseña</title>
+	<title>Menú</title>
 	<link
 		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
 		rel="stylesheet"
@@ -45,8 +45,7 @@
 						class="boton-crear" />
 					<p:commandButton update="@form" value="Opcion 4"
 						class="boton-crear" />
-					<p:commandButton update="@form" value="Opcion 5"
-						class="boton-crear" />
+				
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						class="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
