--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/resetPassword.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/resetPassword.xhtml
@@ -54,7 +54,7 @@
 
 				<div class="field botones-container">
 					<p:commandButton update="@form" value="Continuar"
-						styleClass="boton-crear" action="newPassword.xhtml?faces-redirect=true" immediate="true"/>
+						styleClass="boton-crear" action="#{UserBean.recordarContrasegna}" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
