--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newPassword.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newPassword.xhtml
@@ -60,7 +60,7 @@
 <!-- Botones El primero es para guardar la nueva contraseña -->
 				<div class="field botones-container">
 					<p:commandButton update="@form" value="Continuar"
-						styleClass="boton-crear" />
+						styleClass="boton-crear" action="#{UserBean.cambiarContrasegna}" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
