--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
@@ -20,17 +20,14 @@
 			<p:toolbar>
 				<p:toolbarGroup>
 					<p:commandButton value="Nuevo" icon="pi pi-plus"
-						actionListener="#{CarneBean.openNew}"
+						action="#{CarneBean.openNew}"
 						update=":dialogs:manage-product-content"
 						oncomplete="PF('manageProductDialog').show()"
 						styleClass="ui-button-success" style="margin-right: .5rem">
 						<p:resetInput target=":dialogs:manage-product-content" />
 					</p:commandButton>
-					<p:commandButton id="delete-products-button"
-						value="#{CarneBean.deleteButtonMessage}" icon="pi pi-trash"
-						actionListener="#{CarneBean.deleteSelectedProducts}"
-						styleClass="ui-button-danger"
-						disabled="#{!CarneBean.hasSelectedProducts()}" update="@this">
+					<p:commandButton id="delete-products-button" icon="pi pi-trash"
+						styleClass="ui-button-danger" update="@this">
 						<p:confirm header="Confirmar"
 							message="Desea eliminar los productos seleccionados?"
 							icon="pi pi-exclamation-triangle" />
@@ -48,11 +45,9 @@
 			</p:toolbar>
 
 			<p:dataTable id="dt-products" widgetVar="dtProducts" var="product"
-				value="#{CarneBean.products}" reflow="true"
-				styleClass="products-table"
-				selection="#{CarneBean.selectedProducts}" rowKey="#{product.id}"
-				paginator="true" rows="10" selectionRowMode="add"
-				paginatorPosition="bottom">
+				value="#{CarneBean.carne}" reflow="true" styleClass="products-table"
+				rowKey="#{product.id}" paginator="true" rows="10"
+				selectionRowMode="add" paginatorPosition="bottom">
 				<f:facet name="header">
 					<div class="products-table-header">
 						<span style="font-weight: bold">PRODUCTOS</span> <span
@@ -81,10 +76,6 @@
 					filterBy="#{product.name}">
 					<h:outputText value="#{product.name}" />
 				</p:column>
-				<p:column headerText="Imagen" exportable="false">
-					<p:graphicImage name="images/product/#{product.image}"
-						library="demo" styleClass="product-image" />
-				</p:column>
 				<p:column headerText="Precio" sortBy="#{product.price}">
 					<h:outputText value="#{product.price}" style="font-weight: 700">
 						<f:convertNumber currencySymbol="$" type="currency" />
@@ -94,13 +85,10 @@
 					filterBy="#{product.category}">
 					<h:outputText value="#{product.category}" />
 				</p:column>
-				<p:column headerText="Reseñas" sortBy="#{product.rating}">
-					<p:rating value="#{product.rating}" readonly="true" />
-				</p:column>
 				<p:column headerText="Estado" sortBy="#{product.inventoryStatus}"
 					filterBy="#{product.inventoryStatus}">
 					<h:outputText
-						styleClass="product-badge status-#{product.inventoryStatus.name().toLowerCase()}"
+						styleClass="product-badge status-#{product.inventoryStatus.name}"
 						value="#{product.inventoryStatus.text}" />
 				</p:column>
 				<p:column exportable="false" ariaHeaderText="Actions">
@@ -110,14 +98,14 @@
 						styleClass="edit-button rounded-button ui-button-success"
 						process="@this">
 						<f:setPropertyActionListener value="#{product}"
-							target="#{CarneBean.selectedProduct}" />
+							target="#{CarneBean.carneDTO}" />
 						<p:resetInput target=":dialogs:manage-product-content" />
 					</p:commandButton>
 					<p:commandButton class="ui-button-warning rounded-button"
 						icon="pi pi-trash" process="@this"
 						oncomplete="PF('deleteProductDialog').show()">
 						<f:setPropertyActionListener value="#{product}"
-							target="#{CarneBean.selectedProduct}" />
+							target="#{CarneBean.carneDTO}" />
 					</p:commandButton>
 				</p:column>
 
@@ -128,25 +116,20 @@
 			<p:dialog header="Detalles del producto" showEffect="fade"
 				modal="true" widgetVar="manageProductDialog" responsive="true">
 				<p:outputPanel id="manage-product-content" class="ui-fluid">
-					<p:outputPanel rendered="#{not empty CarneBean.selectedProduct}">
-						<p:graphicImage
-							name="images/product/#{CarneBean.selectedProduct.image}"
-							library="demo" styleClass="product-image"
-							rendered="#{not empty CarneBean.selectedProduct.image}" />
+					<p:outputPanel>
+
 						<div class="field">
 							<p:outputLabel for="name">Nombre</p:outputLabel>
-							<p:inputText id="name" value="#{CarneBean.selectedProduct.name}"
-								required="true" />
+							<p:inputText id="name" value="#{CarneBean.name}" required="true" />
 						</div>
 						<div class="field">
 							<p:outputLabel for="description">Descripción</p:outputLabel>
 							<p:inputTextarea id="description"
-								value="#{CarneBean.selectedProduct.description}" />
+								value="#{CarneBean.description}" />
 						</div>
 						<div class="field">
 							<p:outputLabel for="category">Categoria</p:outputLabel>
-							<p:selectOneRadio id="category"
-								value="#{CarneBean.selectedProduct.category}"
+							<p:selectOneRadio id="category" value="#{CarneBean.category}"
 								layout="responsive" columns="2">
 								<f:selectItem itemLabel="Carne vegana" itemValue="Carne vegana" />
 								<f:selectItem itemLabel="Carne de res" itemValue="Carne de res" />
@@ -158,14 +141,13 @@
 						<div class="formgrid grid">
 							<div class="field col">
 								<p:outputLabel for="price">Precio</p:outputLabel>
-								<p:inputNumber id="price"
-									value="#{CarneBean.selectedProduct.price}" symbol=" COP"
-									symbolPosition="s" decimalSeparator="." thousandSeparator="," />
+								<p:inputNumber id="price" value="#{CarneBean.price}"
+									symbol=" COP" symbolPosition="s" decimalSeparator="."
+									thousandSeparator="," />
 							</div>
 							<div class="field col">
 								<p:outputLabel for="quantity">Cantidad</p:outputLabel>
-								<p:spinner id="quantity" min="0"
-									value="#{CarneBean.selectedProduct.quantity}" />
+								<p:spinner id="quantity" min="0" value="#{CarneBean.quantity}" />
 							</div>
 						</div>
 					</p:outputPanel>
@@ -173,8 +155,8 @@
 
 				<f:facet name="footer">
 					<p:commandButton value="Guardar" icon="pi pi-check"
-						actionListener="#{CarneBean.saveProduct}"
-						update="manage-product-content"
+						action="#{CarneBean.guardar}" update=":form:dt-products"
+						onclick="PF('manageProductDialog').hide()"
 						process="manage-product-content @this" />
 					<p:commandButton value="Cancelar" icon="pi pi-times"
 						onclick="PF('manageProductDialog').hide()"
@@ -186,7 +168,7 @@
 				width="300" message="Desea eliminar el producto?" header="Confirmar"
 				severity="warn">
 				<p:commandButton value="Si" icon="pi pi-check"
-					actionListener="#{CarneBean.deleteProduct}" process="@this"
+					actionListener="#{CarneBean.eliminar}" process="@this"
 					update=":form:delete-products-button"
 					oncomplete="PF('deleteProductDialog').hide()" />
 				<p:commandButton value="No" type="button"
