Cambios en el xhtml de las tablas

--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newPassword.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newPassword.xhtml
@@ -36,20 +36,24 @@
 					Contraseña</h2>
 					<!-- contraseña 1 -->
 
-				<div class="field" style="margin-bottom: 20px;">
+							<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
 							value="#{UserBean.contrasegna}" id="pwd1" match="pwd2"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="pwd1" value="Contraseña" />
+							required="true" style="width: 100%;" feedback="true"
+							promptLabel="Ingrese una contraseña segura"
+							validatorMessage="La contraseña debe tener al menos 8 caracteres, incluyendo una mayúscula, una minúscula y un número.">
+							<f:validateRegex pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$" />
+						</p:password> <p:outputLabel for="pwd1" value="Contraseña" />
 					</span>
 				</div>
 
-					<!-- contraseña 2 -->
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
 							value="#{UserBean.contrasegna2}" id="pwd2" required="true"
-							style="width: 100%;" /> <p:outputLabel for="pwd2"
-							value="Confirmar Contraseña" />
+							style="width: 100%;" feedback="true"
+							promptLabel="Confirme su contraseña"
+							validatorMessage="Las contraseñas no coinciden." /> <p:outputLabel
+							for="pwd2" value="Confirmar Contraseña" />
 					</span>
 				</div>
 
