--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
@@ -26,22 +26,11 @@
 						styleClass="ui-button-success" style="margin-right: .5rem">
 						<p:resetInput target=":dialogs:manage-product-content" />
 					</p:commandButton>
-					<p:commandButton id="delete-products-button" icon="pi pi-trash"
-						styleClass="ui-button-danger" update="@this">
-						<p:confirm header="Confirmar"
-							message="Desea eliminar los productos seleccionados?"
-							icon="pi pi-exclamation-triangle" />
-					</p:commandButton>
+
+
+
 				</p:toolbarGroup>
-				<p:toolbarGroup align="right">
-					<p:fileUpload mode="simple" skinSimple="true" label="Importar"
-						chooseIcon="pi pi-download" />
-					<p:commandButton value="Exportar" icon="pi pi-upload"
-						styleClass="ui-button-help" ajax="false">
-						<p:dataExporter type="pdf" target="dt-products"
-							fileName="products" />
-					</p:commandButton>
-				</p:toolbarGroup>
+
 			</p:toolbar>
 
 			<p:dataTable id="dt-products" widgetVar="dtProducts" var="product"
@@ -58,13 +47,11 @@
 					</div>
 				</f:facet>
 
-				<p:ajax event="rowSelect" update=":form:delete-products-button" />
-				<p:ajax event="rowUnselect" update=":form:delete-products-button" />
-				<p:ajax event="rowSelectCheckbox"
-					update=":form:delete-products-button" />
-				<p:ajax event="rowUnselectCheckbox"
-					update=":form:delete-products-button" />
-				<p:ajax event="toggleSelect" update=":form:delete-products-button" />
+				<p:ajax event="rowSelect" />
+				<p:ajax event="rowUnselect" />
+				<p:ajax event="rowSelectCheckbox" />
+				<p:ajax event="rowUnselectCheckbox" />
+				<p:ajax event="toggleSelect" />
 
 				<p:column selectionMode="multiple" exportable="false"></p:column>
 
@@ -102,8 +89,7 @@
 
 					<p:commandButton class="ui-button-warning rounded-button"
 						icon="pi pi-trash" process="@this"
-						actionListener="#{CarneBean.eliminar}"
-						update=":form:dt-products">
+						actionListener="#{CarneBean.eliminar}" update=":form:dt-products">
 						<f:setPropertyActionListener value="#{product}"
 							target="#{CarneBean.carneDTO}" />
 					</p:commandButton>
@@ -170,7 +156,6 @@
 				severity="warn">
 				<p:commandButton value="Si" icon="pi pi-check"
 					actionListener="#{CarneBean.eliminar}" process="@this"
-					update=":form:delete-products-button"
 					oncomplete="PF('deleteProductDialog').hide()" />
 				<p:commandButton value="No" type="button"
 					styleClass="ui-button-secondary" icon="pi pi-times"
