--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
@@ -75,23 +75,32 @@
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
 							value="#{UserBean.contrasegna}" id="pwd1" match="pwd2"
-							required="true" style="width: 100%;" /> <p:outputLabel
-							for="pwd1" value="Contraseña" />
+							required="true" style="width: 100%;" feedback="true"
+							promptLabel="Ingrese una contraseña segura"
+							validatorMessage="La contraseña debe tener al menos 8 caracteres, incluyendo una mayúscula, una minúscula y un número.">
+							<f:validateRegex pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$" />
+						</p:password> <p:outputLabel for="pwd1" value="Contraseña" />
 					</span>
 				</div>
 
 				<div class="field" style="margin-bottom: 20px;">
 					<span class="ui-float-label"> <p:password
 							value="#{UserBean.contrasegna2}" id="pwd2" required="true"
-							style="width: 100%;" /> <p:outputLabel for="pwd2"
-							value="Confirmar Contraseña" />
+							style="width: 100%;" feedback="true"
+							promptLabel="Confirme su contraseña"
+							validatorMessage="Las contraseñas no coinciden." /> <p:outputLabel
+							for="pwd2" value="Confirmar Contraseña" />
 					</span>
 				</div>
+
 
 				<div class="field" style="margin-bottom: 20px;">
 					<span> <p:selectOneMenu id="lazy" dynamic="true"
 							style="width: 100%;">
-							<f:selectItem itemLabel="Seleccione un cargo" itemValue="" />
+							<f:selectItem itemLabel="Seleccione un cargo" itemValue="0" />
+							<f:selectItem itemLabel="Administrador" itemValue="Administrador" />
+							<f:selectItem itemLabel="Cajero" itemValue="Cajero" />
+							<f:selectItem itemLabel="Empleado" itemValue="Empleado" />
 							<f:selectItems value="#{UserBean.cargo}" />
 						</p:selectOneMenu>
 					</span>
