--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/index.xhtml
@@ -63,7 +63,7 @@
 
 
 				<div class="field botones-container">
-					<p:commandButton value="Ingresar" class="boton-crear"
+					<p:commandButton value="Ingresar" icon="fa-solid fa-right-to-bracket" class="boton-crear"
 						action="#{UserBean.iniciarSesion}" />
 					<p:commandButton value="Nuevo Usuario" icon="fa fa-user"
 						class="boton-home" action="newUser.xhtml?faces-redirect=true"
