--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
@@ -8,10 +8,57 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+
 	<title>Carnes</title>
+
+	<link
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+		crossorigin="anonymous" />
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous" />
+	<script src="https://kit.fontawesome.com/e5507d7bda.js"
+		crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="tablaStyle.css" />
+	<script src="script.js"></script>
 	<link rel="icon" type="image/png" href="iconopag.ico" />
 </h:head>
 <h:body>
+	<nav class="navbar navbar-dark bg-dark position-absolute top-0 w-100">
+	<div class="container-fluid">
+		<span class="navbar-brand mb-0 h6">Control Carnes</span>
+
+
+		<div class="dropdown">
+			<button class="btn btn-outline-light dropdown-toggle" type="button"
+				id="menuOpciones" data-bs-toggle="dropdown" aria-expanded="false">
+				Opciones</button>
+			<ul class="dropdown-menu dropdown-menu-end"
+				aria-labelledby="menuOpciones">
+				<li><h:form>
+						<p:commandLink value="Cambiar Contraseña"
+							styleClass="dropdown-item"
+							action="newPassword.xhtml?faces-redirect=true" />
+					</h:form></li>
+				<li><h:form>
+						<p:commandLink value="Menú"
+							styleClass="dropdown-item "
+							action="menu.xhtml?faces-redirect=true" ajax="false"
+							immediate="true" />
+					</h:form></li>
+				<li><h:form>
+						<p:commandLink value="Cerrar Sesión"
+							styleClass="dropdown-item text-danger"
+							action="index.xhtml?faces-redirect=true" ajax="false"
+							immediate="true" />
+					</h:form></li>
+			</ul>
+		</div>
+	</div>
+	</nav>
 	<h1>#{TableBean.products}</h1>
 	<div class="card crud-demo">
 		<h:form id="form">
