--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
@@ -109,7 +109,7 @@
 				<div class="field botones-container">
 
 					<p:commandButton action="#{UserBean.crear}" value="Guardar"
-						styleClass="boton-crear" update="formulario1" />
+						icon="fa-solid fa-floppy-disk" styleClass="boton-crear" update="formulario1" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
 						immediate="true" />
