--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/resetPassword.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/resetPassword.xhtml
@@ -53,7 +53,7 @@
 <!-- Al ponerle la funcion al boton de continuar tienes que quitar el inmediate para que se cumpla la funcion (Solo en el de continuar) -->
 
 				<div class="field botones-container">
-					<p:commandButton update="@form" value="Continuar"
+					<p:commandButton update="@form" icon="fa-solid fa-right-long" value="Continuar"
 						styleClass="boton-crear" action="#{UserBean.recordarContrasegna}" />
 					<p:commandButton value="Inicio" icon="fa fa-home"
 						styleClass="boton-home" action="index.xhtml?faces-redirect=true"
