--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/carne.xhtml
@@ -44,8 +44,7 @@
 							action="newPassword.xhtml?faces-redirect=true" />
 					</h:form></li>
 				<li><h:form>
-						<p:commandLink value="Menú"
-							styleClass="dropdown-item "
+						<p:commandLink value="Menú" styleClass="dropdown-item "
 							action="menu.xhtml?faces-redirect=true" ajax="false"
 							immediate="true" />
 					</h:form></li>
