Eliminar en todos los productos

--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/juguete.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/juguete.xhtml
@@ -132,10 +132,13 @@
 						<p:resetInput target=":dialogs:manage-product-content" />
 					</p:commandButton>
 					<p:commandButton class="ui-button-warning rounded-button"
-						icon="pi pi-trash" process="@this"
-						oncomplete="PF('deleteProductDialog').show()">
+						icon="pi pi-trash" process="@this" action="#{JugueteBean.eliminar}"
+						update=":form:dt-products">
 						<f:setPropertyActionListener value="#{product}"
 							target="#{JugueteBean.jugueteDTO}" />
+						<p:confirm header="Confirmar"
+							message="¿Está seguro de eliminar este producto?"
+							icon="pi pi-exclamation-triangle" />
 					</p:commandButton>
 				</p:column>
 
