--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/ropa.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/ropa.xhtml
@@ -129,11 +129,15 @@
 							target="#{RopaBean.ropaDTO}" />
 						<p:resetInput target=":dialogs:manage-product-content" />
 					</p:commandButton>
+					
 					<p:commandButton class="ui-button-warning rounded-button"
-						icon="pi pi-trash" process="@this"
-						oncomplete="PF('deleteProductDialog').show()">
+						icon="pi pi-trash" process="@this" action="#{RopaBean.eliminar}"
+						update=":form:dt-products">
 						<f:setPropertyActionListener value="#{product}"
 							target="#{RopaBean.ropaDTO}" />
+						<p:confirm header="Confirmar"
+							message="¿Está seguro de eliminar este producto?"
+							icon="pi pi-exclamation-triangle" />
 					</p:commandButton>
 				</p:column>
 
