--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/juguete.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/juguete.xhtml
@@ -122,7 +122,7 @@
 					<h:outputText value="#{product.inventoryStatus.text}" />
 				</p:column>
 				<p:column exportable="false" ariaHeaderText="Actions">
-					<p:commandButton icon="pi pi-pencil"
+					<p:commandButton icon="pi pi-pencil"  action="#{JugueteBean.mostrar}"
 						update=":dialogs2:manageupdate-product-content"
 						oncomplete="PF('manageUpdateProductDialog').show()"
 						styleClass="edit-button rounded-button ui-button-success"
