--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/newUser.xhtml
@@ -18,6 +18,7 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 		crossorigin="anonymous" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="stylesheet" href="style.css" />
 
 	<link rel="stylesheet" href="userStyle.css" />
@@ -29,7 +30,7 @@
 </h:head>
 
 <h:body>
-	<div id="box-formulario">
+	<div id="box-formulario" class="animate__animated animate__bounceInLeft">
 		<div class="card">
 			<h:form id="formulario1">
 
